tests/pass/test_import_item.tk
import std/io::println

fn main() -> i32 {
    println("Hello from direct import!");
    return 0;
}
