tests/fail/fail_pass_no_receiver.tk
import std/io::println

fn main() -> i32 {
    match 1 {
        1 => { pass 42 } // Error: pass used without a receiver (no 'pass match')
    }
    return 0
}
